; ModuleID = '/home/carl/AnghaBench/linux/sound/pci/ali5451/extr_ali5451.c_snd_ali_resources.c'
source_filename = "/home/carl/AnghaBench/linux/sound/pci/ali5451/extr_ali5451.c_snd_ali_resources.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_ali = type { %struct.TYPE_4__*, %struct.TYPE_5__*, i32, i32 }
%struct.TYPE_4__ = type { i32 }
%struct.TYPE_5__ = type { i32 }

@.str = private unnamed_addr constant [26 x i8] c"resources allocation ...\0A\00", align 1
@.str.1 = private unnamed_addr constant [9 x i8] c"ALI 5451\00", align 1
@snd_ali_card_interrupt = common dso_local global i32 0, align 4
@IRQF_SHARED = common dso_local global i32 0, align 4
@KBUILD_MODNAME = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [24 x i8] c"Unable to request irq.\0A\00", align 1
@EBUSY = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [22 x i8] c"resources allocated.\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.snd_ali*)* @snd_ali_resources to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @snd_ali_resources(%struct.snd_ali* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.snd_ali*, align 8
  %4 = alloca i32, align 4
  store %struct.snd_ali* %0, %struct.snd_ali** %3, align 8
  %5 = load %struct.snd_ali*, %struct.snd_ali** %3, align 8
  %6 = getelementptr inbounds %struct.snd_ali, %struct.snd_ali* %5, i32 0, i32 0
  %7 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %8 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = call i32 @dev_dbg(i32 %9, i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str, i64 0, i64 0))
  %11 = load %struct.snd_ali*, %struct.snd_ali** %3, align 8
  %12 = getelementptr inbounds %struct.snd_ali, %struct.snd_ali* %11, i32 0, i32 1
  %13 = load %struct.TYPE_5__*, %struct.TYPE_5__** %12, align 8
  %14 = call i32 @pci_request_regions(%struct.TYPE_5__* %13, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.1, i64 0, i64 0))
  store i32 %14, i32* %4, align 4
  %15 = load i32, i32* %4, align 4
  %16 = icmp slt i32 %15, 0
  br i1 %16, label %17, label %19

17:                                               ; preds = %1
  %18 = load i32, i32* %4, align 4
  store i32 %18, i32* %2, align 4
  br label %60

19:                                               ; preds = %1
  %20 = load %struct.snd_ali*, %struct.snd_ali** %3, align 8
  %21 = getelementptr inbounds %struct.snd_ali, %struct.snd_ali* %20, i32 0, i32 1
  %22 = load %struct.TYPE_5__*, %struct.TYPE_5__** %21, align 8
  %23 = call i32 @pci_resource_start(%struct.TYPE_5__* %22, i32 0)
  %24 = load %struct.snd_ali*, %struct.snd_ali** %3, align 8
  %25 = getelementptr inbounds %struct.snd_ali, %struct.snd_ali* %24, i32 0, i32 3
  store i32 %23, i32* %25, align 4
  %26 = load %struct.snd_ali*, %struct.snd_ali** %3, align 8
  %27 = getelementptr inbounds %struct.snd_ali, %struct.snd_ali* %26, i32 0, i32 1
  %28 = load %struct.TYPE_5__*, %struct.TYPE_5__** %27, align 8
  %29 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %28, i32 0, i32 0
  %30 = load i32, i32* %29, align 4
  %31 = load i32, i32* @snd_ali_card_interrupt, align 4
  %32 = load i32, i32* @IRQF_SHARED, align 4
  %33 = load i32, i32* @KBUILD_MODNAME, align 4
  %34 = load %struct.snd_ali*, %struct.snd_ali** %3, align 8
  %35 = call i64 @request_irq(i32 %30, i32 %31, i32 %32, i32 %33, %struct.snd_ali* %34)
  %36 = icmp ne i64 %35, 0
  br i1 %36, label %37, label %46

37:                                               ; preds = %19
  %38 = load %struct.snd_ali*, %struct.snd_ali** %3, align 8
  %39 = getelementptr inbounds %struct.snd_ali, %struct.snd_ali* %38, i32 0, i32 0
  %40 = load %struct.TYPE_4__*, %struct.TYPE_4__** %39, align 8
  %41 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %40, i32 0, i32 0
  %42 = load i32, i32* %41, align 4
  %43 = call i32 @dev_err(i32 %42, i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.2, i64 0, i64 0))
  %44 = load i32, i32* @EBUSY, align 4
  %45 = sub nsw i32 0, %44
  store i32 %45, i32* %2, align 4
  br label %60

46:                                               ; preds = %19
  %47 = load %struct.snd_ali*, %struct.snd_ali** %3, align 8
  %48 = getelementptr inbounds %struct.snd_ali, %struct.snd_ali* %47, i32 0, i32 1
  %49 = load %struct.TYPE_5__*, %struct.TYPE_5__** %48, align 8
  %50 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %49, i32 0, i32 0
  %51 = load i32, i32* %50, align 4
  %52 = load %struct.snd_ali*, %struct.snd_ali** %3, align 8
  %53 = getelementptr inbounds %struct.snd_ali, %struct.snd_ali* %52, i32 0, i32 2
  store i32 %51, i32* %53, align 8
  %54 = load %struct.snd_ali*, %struct.snd_ali** %3, align 8
  %55 = getelementptr inbounds %struct.snd_ali, %struct.snd_ali* %54, i32 0, i32 0
  %56 = load %struct.TYPE_4__*, %struct.TYPE_4__** %55, align 8
  %57 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %56, i32 0, i32 0
  %58 = load i32, i32* %57, align 4
  %59 = call i32 @dev_dbg(i32 %58, i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.3, i64 0, i64 0))
  store i32 0, i32* %2, align 4
  br label %60

60:                                               ; preds = %46, %37, %17
  %61 = load i32, i32* %2, align 4
  ret i32 %61
}

declare dso_local i32 @dev_dbg(i32, i8*) #1

declare dso_local i32 @pci_request_regions(%struct.TYPE_5__*, i8*) #1

declare dso_local i32 @pci_resource_start(%struct.TYPE_5__*, i32) #1

declare dso_local i64 @request_irq(i32, i32, i32, i32, %struct.snd_ali*) #1

declare dso_local i32 @dev_err(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
